(user): adds User to response body on Login
