# docs/swagger.json
@@ -815,7 +815,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": ""
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.ResponseDTO"
+                        }
                     },
                     "403": {
                         "description": ""
